--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -1,13 +1,13 @@
 ---
-title: "Talk 2 on Relevant Topic in Your Field"
+title: "Oral presentation at ADMA 2020"
 collection: talks
-type: "Talk"
+type: "Oral Presentation"
 permalink: /talks/2014-02-01-talk-2
-venue: "London School of Testing"
-date: 2014-02-01
-location: "London, UK"
+venue: "The 16th International Conference on Advanced Data Mining and Applications (ADMA)"
+date: 2020-12-13
+location: "Foshan, China"
 ---
 
-[More information here](http://example2.com)
+[Download presentation here](https://drive.google.com/uc?export=download&id=1-P-qEc5mvXof0bChGzJqpOGWfc2zM95A)
 
 This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
